// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SearchBar /> > display possible search candidates 1`] = `
<div
  aria-label="Found users"
>
  <div
    aria-label="Test user"
    class="_search-card_1db872"
    tabindex="-1"
  >
    <img
      alt="Test profile picture"
      class="profile-picture _profile-picture_1db872"
      src="/src/assets/default-profile-picture.jpeg"
    />
    <span
      class="_username-span_1db872"
    >
      Test
    </span>
  </div>
  <div
    aria-label="Test2 user"
    class="_search-card_1db872"
    tabindex="-1"
  >
    <img
      alt="Test2 profile picture"
      class="profile-picture _profile-picture_1db872"
      src="/src/assets/default-profile-picture.jpeg"
    />
    <span
      class="_username-span_1db872"
    >
      Test2
    </span>
  </div>
  <div
    aria-label="Tim user"
    class="_search-card_1db872"
    tabindex="-1"
  >
    <img
      alt="Tim profile picture"
      class="profile-picture _profile-picture_1db872"
      src="/src/assets/default-profile-picture.jpeg"
    />
    <span
      class="_username-span_1db872"
    >
      Tim
    </span>
  </div>
</div>
`;

exports[`<SearchBar /> > displays error message on wrong failed requests 1`] = `
<div
  aria-label="Found users"
>
  <span>
    Ups! An error occurred!
  </span>
</div>
`;

exports[`<SearchBar /> > displays searching text before users are loaded 1`] = `
<div
  aria-label="Found users"
>
  <span>
    Searching...
  </span>
</div>
`;

exports[`<SearchBar /> > displays searching text before users are loaded 2`] = `
<div
  aria-label="Found users"
>
  <div
    aria-label="Test user"
    class="_search-card_1db872"
    tabindex="-1"
  >
    <img
      alt="Test profile picture"
      class="profile-picture _profile-picture_1db872"
      src="/src/assets/default-profile-picture.jpeg"
    />
    <span
      class="_username-span_1db872"
    >
      Test
    </span>
  </div>
  <div
    aria-label="Test2 user"
    class="_search-card_1db872"
    tabindex="-1"
  >
    <img
      alt="Test2 profile picture"
      class="profile-picture _profile-picture_1db872"
      src="/src/assets/default-profile-picture.jpeg"
    />
    <span
      class="_username-span_1db872"
    >
      Test2
    </span>
  </div>
  <div
    aria-label="Tim user"
    class="_search-card_1db872"
    tabindex="-1"
  >
    <img
      alt="Tim profile picture"
      class="profile-picture _profile-picture_1db872"
      src="/src/assets/default-profile-picture.jpeg"
    />
    <span
      class="_username-span_1db872"
    >
      Tim
    </span>
  </div>
</div>
`;

exports[`<SearchBar /> > renders correctly 1`] = `
<div
  role="search"
  tabindex="-1"
>
  <input
    name="searchbox"
    role="searchbox"
    type="text"
    value=""
  />
</div>
`;
